#605 Remove MaxPermSize as it is deprecated