@@ -7,7 +7,7 @@ pipeline {
   }
 
   environment {
-    GRADLE_OPTS='-Dorg.gradle.daemon=true -Xmx1024m -Xms512m -XX:MaxPermSize=2048m'
+    GRADLE_OPTS='-Dorg.gradle.daemon=true -Xmx1024m -Xms512m'
     WORSHIPSONGS_KEYSTORE_PASSWORD = credentials('worshipsongs-android-keystore-pwd')
     WORSHIPSONGS_KEY_ALIAS = credentials('worshipsongs-android-key-alias')
     WORSHIPSONGS_KEY_PASSWORD = credentials('worshipsongs-android-key-pwd')
